<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backk">

    <ImageView
        android:id="@+id/sett"
        android:layout_width="101dp"
        android:layout_height="83dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/sett"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="TODO"
        android:focusable="true" />

    <androidx.cardview.widget.CardView
        android:layout_width="388dp"
        android:layout_height="300dp"
        android:outlineAmbientShadowColor="@color/black"
        app:cardCornerRadius="8dp"
        android:contentDescription="Board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/clear">

            <CheckBox
                android:id="@+id/C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="91dp"
                android:layout_marginTop="252dp"
                android:layout_marginEnd="232dp"
                android:shadowColor="@color/black"
                android:shadowRadius="8"
                android:text="@string/c"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="208dp"
                android:fontFamily="@font/anton"
                android:shadowColor="@color/black"
                android:shadowRadius="15"
                android:text="@string/chevy_chase_md"
                android:textColor="#e38f8f"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/F"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="252dp"
                android:layout_marginEnd="310dp"
                android:shadowColor="@color/black"
                android:shadowRadius="8"
                android:text="@string/f"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/HIGH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="178dp"
                android:layout_marginTop="118dp"
                android:layout_marginEnd="181dp"
                android:layout_marginBottom="130dp"
                android:fontFamily="@font/anton"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:text="@string/h"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/LOW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="291dp"
                android:layout_marginTop="118dp"
                android:layout_marginEnd="71dp"
                android:layout_marginBottom="130dp"
                android:fontFamily="@font/anton"
                android:shadowColor="@color/black"
                android:shadowRadius="8"
                android:text="@string/l"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="78dp"
                android:layout_marginEnd="232dp"
                android:layout_marginBottom="48dp"
                android:fontFamily="@font/anton"
                android:shadowColor="@color/black"
                android:shadowRadius="15"
                android:text="@string/_90"
                android:textColor="@color/white"
                android:textSize="100sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>